Name:               network-api-support
Version:            0.3.5
License:            BSD3
License-File:       LICENSE
Author:             Mark Hibberd <mark@hibberd.id.au>
Maintainer:         Mark Hibberd <mark@hibberd.id.au>
Copyright:          (c) 2012 Mark Hibberd
Synopsis:           Toolkit for building http client libraries over Network.Http.Conduit
Category:           Network APIs
Homepage:           https://github.com/markhibberd/network-api-support
Bug-reports:        https://github.com/markhibberd/network-api-support/issues
Cabal-Version:      >= 1.10
Build-Type:         Simple
Tested-With:        GHC == 7.10.3, GHC == 8.0.2
Description:
  Toolkit for building http client libraries over Network.Http.Conduit.
  .
  /Note/: Examples of use can be found in the pin and postmark client
  libraries.


Source-Repository   head
  Type:             git
  Location:         https://github.com/markhibberd/network-api-support.git

flag use-attoparsec-aeson
  description: Depend on Data.Aeson.Parser from attoparsec-aeson
  default: True
  manual: False

Library
  Build-Depends:
                    base                          >= 3          && < 6
                  , attoparsec                    >= 0.10       && < 0.15
                  , bytestring                    >= 0.9.1.5    && < 0.12
                  , case-insensitive              >= 0.2        && < 1.3
                  , http-types                    >= 0.6        && < 0.13
                  , http-client                   >= 0.2.2.2    && < 0.8
                  , http-client-tls               >= 0.2.1.1    && < 0.4
                  , text                          >= 0.11       && < 2.2
                  , time                          >= 1.0        && < 1.15
                  , tls                           >= 1.2.0      && < 2.2

  if flag(use-attoparsec-aeson)
    Build-Depends:
                    aeson                         >= 2.2        && < 2.3
                  , attoparsec-aeson              >= 2.1        && < 2.3
  else
    Build-Depends:
                    aeson                         >= 0.5        && < 2.2


  GHC-Options:
                    -Wall -fno-warn-orphans

  Hs-Source-Dirs:
                    src

  default-language:
                    Haskell2010

  Exposed-Modules:
                    Network.Api.Support
                    Network.Api.Support.Core
                    Network.Api.Support.Request
                    Network.Api.Support.Response

Test-suite test
  Hs-Source-Dirs:
                    test

  default-language:
                    Haskell2010

  type:
                    exitcode-stdio-1.0

  main-is:
                    Main.hs

  other-modules:
                    Network.Api.Support.Tests

  Ghc-Options:
                    -Wall
                    -fwarn-tabs

  Build-Depends:
                   base >= 3 && < 5
                   , http-client
                   , network-api-support
                   , QuickCheck
                   , test-framework
                   , test-framework-quickcheck2
                   , test-framework-hunit
